--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                         <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
                 </ul>
             </div>
@@ -34,7 +34,7 @@
         </section>
         <section id="parceiros">
             <div class="container-fluid text-center margin parceiros">
-                <h3>Parceiros</h3>
+                <h3 class="margin">Parceiros</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
@@ -50,6 +50,24 @@
                 </div>
             </div>
         </section>
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3 class="margin">Serviços</h3>
+0                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/app.jpg" width="100%">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/site01.jpg" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="container-fluid text-center bg-footer margin">
+            <p>Desenvolvido por Silvia Eveline</p>
+        </footer>
 
     </body>
 </html>
